Correction visibilité Loader menu+scroll accueil

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -149,13 +149,13 @@ p {
 /**Loader Ball**/
 
 .loader {
-	position: fixed;
+	position:fixed;
 	background-color: $White;
-	height: 50vh;
+	height: 100%;
 	inset: 0;
 	z-index: 2;
 	opacity: 0.9;
-	transform-origin: top;
+	transform-origin:top;
 	animation: loader-fade-out 0s 1.5s forwards;
 	display: flex;
 	flex-direction: column;
@@ -566,10 +566,6 @@ footer {
         padding: 30px 0 30px 0;
     }
 
-/** Loader**/
-.loader {
-	height: 100vh;
-}
 
     /** Explorer restaurants **/ 
 
